fix dots alignment

--- a/assets/scss/components/smallSlider.scss
+++ b/assets/scss/components/smallSlider.scss
@@ -72,7 +72,7 @@
           font-size: 1.2vw;
           line-height: 0.8vw;
           position: relative;
-          padding: 0.2vw 0.2vw 0.2vw 0.3vw;
+          padding: 0.23vw 0.2vw 0.2vw 0.3vw;
 
           &.active {
             border: 0.125vw solid black;
